kube/ingress/ingress-external-lb-sample.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: external-lb
spec:
  controller: example.com/ingress-controller
  parameters:
    apiGroup: k8s.example.com
    kind: IngressParameters
    name: external-lb
# https://kubernetes.io/docs/concepts/services-networking/ingress/
