kube/ingress/ingress-test-sample.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
spec:
  defaultBackend:
    service:
      name: test
      port:
        number: 80

# https://kubernetes.io/docs/concepts/services-networking/ingress/
